1999-06-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (swarm.dll): Use -lobjcdll, not *.lo files.  
	(either need to disable imports in objc headers or use this DLL,
	since the stubs are only in the generated library).

1999-06-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (swarm.dll): Use libobjc *.lo files instead of
	linking to DLL.
	(libswarm_la_LDFLAGS): Put module -L options before support -L
	options.
	(LIBS): Add -lobjc.
	(libswarm_la_SOURCES, empty.c): Add to prevent problems with empty
	archives on IRIX 6.5.

1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.rules ($(TYPEINFO)): Use just the first word of
	this variable as the target.  This avoids problems with parallel
	makes.

	* Makefile.am: Put all DLL things in a USEDLL automake conditional.
	(swarm.dll): Rename libswarm.a to libswarmdll.a.
	Use swarm.dll.[co].  Add OBJCLIBS.
	(install-data-local): Accomodate.  Remove shell condition on USEDLL.
	(swarm_dll_SOURCES): Remove (calling dllinit.c swarm.dll.c instead).

1999-06-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am, dllinit.c: Remove constructor stuff.
	(OBJS): Use .lo files. 
	(swarm.dll): Add $(OBJS) as a dependency.

	* Makefile.rules (CPPFLAGS): Define BUILDING_SWARM.  The DLL
	import/export specifics will be set in externvar.h.

1999-06-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (libswarm_la_DEPENDENCIES): Use
	$(module)/lib$(module).la.

1999-05-31    <mgd@HELEN>

	* Makefile.am (swarm.dll): Depend on dllinit.c.  Define
	constructor_func for dllinit.c.

1999-05-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* genctors: Redirect into $1.c.  Use $1 as the function name.

1999-05-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (lib_LTLIBRARIES): Set to @LIBSWARM_LA@.
	(EXTRA_LTLIBRARIES): Set to libswarm.la.
	(libswarm_la_LDFLAGS): Add -rpath to $(libdir).  This is necessary