@@ -35,7 +35,11 @@ libswarm_la_SOURCES = empty.c
 empty.c:
 	echo > empty.c
 
-LIBS = $(foreach module,$(SWARMMODULES),-l$(module)) -lobjc $(SYSLIBS)
+if USEBUILTINAVCALL
+EXTRALIBS = -lswarm
+endif
+
+LIBS = $(foreach module,$(SWARMMODULES),-l$(module)) -lobjc $(SYSLIBS) $(EXTRALIBS)
 
 libswarm_la_LDFLAGS = -version-info $(CURRENT):$(REVISION):$(AGE) -rpath $(libdir) $(foreach module,$(SWARMMODULES),-L$(module)) -L../libobjc $(SUPPORTLDFLAGS) -L$(dir $(shell $(CC) -print-libgcc-file-name)) 
 
